new file:   Answers.txt 	modified:   package-lock.json 	modified:   package.json 	modified:   public/index.html 	new file:   public/resume.pdf 	modified:   src/App.tsx 	modified:   src/Layout.tsx 	modified:   src/NetflixTitle.css 	modified:   src/browse/browse.tsx 	new file:   src/components/Footer.css 	new file:   src/components/Footer.tsx 	modified:   src/components/NavBar.tsx 	new file:   src/data/blogs.ts 	new file:   src/data/certifications.ts 	new file:   src/data/contactMe.ts 	new file:   src/data/profileBanner.ts 	new file:   src/data/projects.ts 	new file:   src/data/skills.ts 	new file:   src/data/social.ts 	new file:   src/data/timeline.ts 	new file:   src/images/1.png 	new file:   src/images/2.png 	new file:   src/images/3.png 	new file:   src/images/4.png 	deleted:    src/images/Hotelcalifornia.jpg 	deleted:    src/images/ac-dc.jpg 	deleted:    src/images/alchemist.jpg 	deleted:    src/images/allmeno.png 	deleted:    src/images/atomic_habits.jpg 	deleted:    src/images/avataar.png 	new file:   src/images/blue.jpg 	deleted:    src/images/blue.png 	deleted:    src/images/chris.jpg 	deleted:    src/images/crm.png 	deleted:    src/images/eat_that_frog.jpg 	new file:   src/images/grey.jpg 	deleted:    src/images/grey.png 	deleted:    src/images/guns-n-roses.webp 	deleted:    src/images/letsxchange.png 	modified:   src/images/logo-2.png 	deleted:    src/images/logo-transparent.png 	modified:   src/images/logo.png 	deleted:    src/images/myalphadojo.png 	deleted:    src/images/mystartupequity.png 	new file:   src/images/profile.jpg 	new file:   src/images/red.jpg 	deleted:    src/images/red.png 	deleted:    src/images/rich_dad_poor_dad.jpg 	deleted:    src/images/startups.png 	deleted:    src/images/sumanth.jpeg 	deleted:    src/images/utilisation.png 	deleted:    src/images/vaack.png 	deleted:    src/images/vennelo_adapilla.jpeg 	deleted:    src/images/vijayaniki_aidu_metlu.jpg 	new file:   src/images/yellow.jpg 	deleted:    src/images/yellow.png 	modified:  

--- a/src/NetflixTitle.css
+++ b/src/NetflixTitle.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #141414;
+  background-color: black;
   overflow: hidden;
 }
 
